[426383] Clean code
Maintenance:
* Move some plugins to Java 6 and adopted some generics

Performance fixes:
* Use of StringBuilder instead of String concatenation in loops
* Avoid inneficient constructors and parser for base types
* Avoided some paths to NPE
* Fix some hashcode.