@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2010 IBM Corporation and others.
+ * Copyright (c) 2000, 2014 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -7,6 +7,7 @@
  *
  * Contributors:
  *     IBM Corporation - initial API and implementation
+ *     Mickael Istria (Red Hat Inc.) - Cleanup
  *******************************************************************************/
 package org.eclipse.wst.jsdt.internal.core;
 
@@ -79,19 +80,19 @@ protected static Object convertConstant(Constant constant) {
 	}
 	switch (constant.typeID()) {
 		case TypeIds.T_boolean :
-			return constant.booleanValue() ? Boolean.TRUE : Boolean.FALSE;
+			return Boolean.valueOf(constant.booleanValue());
 		case TypeIds.T_char :
-			return new Character(constant.charValue());
+			return Character.valueOf(constant.charValue());
 		case TypeIds.T_double :
-			return new Double(constant.doubleValue());
+			return Double.valueOf(constant.doubleValue());
 		case TypeIds.T_float :
-			return new Float(constant.floatValue());
+			return Float.valueOf(constant.floatValue());
 		case TypeIds.T_int :
-			return new Integer(constant.intValue());
+			return Integer.valueOf(constant.intValue());
 		case TypeIds.T_long :
-			return new Long(constant.longValue());
+			return Long.valueOf(constant.longValue());
 		case TypeIds.T_short :
-			return new Short(constant.shortValue());
+			return Short.valueOf(constant.shortValue());
 		case TypeIds.T_JavaLangString :
 			return constant.stringValue();
 		default :
