@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2008 IBM Corporation and others.
+ * Copyright (c) 2000, 2014 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -7,6 +7,7 @@
  *
  * Contributors:
  *     IBM Corporation - initial API and implementation
+ *     Mickael Istria (Red Hat Inc.) - Cleanup
  *******************************************************************************/
 package org.eclipse.wst.jsdt.internal.core.builder;
 
@@ -236,8 +237,8 @@ protected IProject[] build(int kind, Map ignored, IProgressMonitor monitor) thro
 			new String[] {IMarker.MESSAGE, IMarker.SEVERITY, IJavaScriptModelMarker.CATEGORY_ID, IMarker.SOURCE_ID},
 			new Object[] {
 				Messages.bind(Messages.build_inconsistentProject, e.getLocalizedMessage()),
-				new Integer(IMarker.SEVERITY_ERROR),
-				new Integer(CategorizedProblem.CAT_BUILDPATH),
+				Integer.valueOf(IMarker.SEVERITY_ERROR),
+				Integer.valueOf(CategorizedProblem.CAT_BUILDPATH),
 				JavaBuilder.SOURCE_ID
 			}
 		);
@@ -248,8 +249,8 @@ protected IProject[] build(int kind, Map ignored, IProgressMonitor monitor) thro
 			new String[] {IMarker.MESSAGE, IMarker.SEVERITY, IJavaScriptModelMarker.CATEGORY_ID, IMarker.SOURCE_ID},
 			new Object[] {
 				Messages.bind(Messages.build_inconsistentProject, e.getLocalizedMessage()),
-				new Integer(IMarker.SEVERITY_ERROR),
-				new Integer(CategorizedProblem.CAT_BUILDPATH),
+				Integer.valueOf(IMarker.SEVERITY_ERROR),
+				Integer.valueOf(CategorizedProblem.CAT_BUILDPATH),
 				JavaBuilder.SOURCE_ID
 			}
 		);
@@ -263,7 +264,7 @@ protected IProject[] build(int kind, Map ignored, IProgressMonitor monitor) thro
 			new String[] {IMarker.MESSAGE, IMarker.SEVERITY, IMarker.SOURCE_ID},
 			new Object[] {
 				Messages.bind(Messages.build_missingSourceFile, e.missingSourceFile),
-				new Integer(IMarker.SEVERITY_ERROR),
+				Integer.valueOf(IMarker.SEVERITY_ERROR),
 				JavaBuilder.SOURCE_ID
 			}
 		);
@@ -333,7 +334,7 @@ protected void clean(IProgressMonitor monitor) throws CoreException {
 			new String[] {IMarker.MESSAGE, IMarker.SEVERITY, IMarker.SOURCE_ID},
 			new Object[] {
 				Messages.bind(Messages.build_inconsistentProject, e.getLocalizedMessage()),
-				new Integer(IMarker.SEVERITY_ERROR),
+				Integer.valueOf(IMarker.SEVERITY_ERROR),
 				JavaBuilder.SOURCE_ID
 			}
 		);
@@ -666,8 +667,8 @@ private boolean isWorthBuilding() throws CoreException {
 			new String[] {IMarker.MESSAGE, IMarker.SEVERITY, IJavaScriptModelMarker.CATEGORY_ID, IMarker.SOURCE_ID},
 			new Object[] {
 				Messages.build_abortDueToClasspathProblems,
-				new Integer(IMarker.SEVERITY_ERROR),
-				new Integer(CategorizedProblem.CAT_BUILDPATH),
+				Integer.valueOf(IMarker.SEVERITY_ERROR),
+				Integer.valueOf(CategorizedProblem.CAT_BUILDPATH),
 				JavaBuilder.SOURCE_ID
 			}
 		);
@@ -709,8 +710,8 @@ private boolean isWorthBuilding() throws CoreException {
 					isClasspathBroken(prereq.getRawIncludepath(), p)
 						? Messages.bind(Messages.build_prereqProjectHasClasspathProblems, p.getName())
 						: Messages.bind(Messages.build_prereqProjectMustBeRebuilt, p.getName()),
-					new Integer(IMarker.SEVERITY_ERROR),
-					new Integer(CategorizedProblem.CAT_BUILDPATH),
+					Integer.valueOf(IMarker.SEVERITY_ERROR),
+					Integer.valueOf(CategorizedProblem.CAT_BUILDPATH),
 					JavaBuilder.SOURCE_ID
 				}
 			);
